--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/marb61a/udemy_clone",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "ejs": "^2.5.2",
+    "ejs-mate": "^2.3.0",
     "express": "^4.14.0",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0"
