--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "ejs-mate": "^2.3.0",
     "express": "^4.14.0",
     "mongoose": "^4.6.0",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1"
   }
 }
