--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.5.2",
     "ejs-mate": "^2.3.0",
     "express": "^4.14.0",
+    "express-flash": "0.0.2",
     "express-session": "^1.14.1",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
