--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "stripe": "^4.9.0"
   }
 }
